--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <button class="button" onclick="openFile('contrate/perfisc.html')">
       <img src="ícones/contrate.png" alt="New1">
     </button>
-    <button class="button" onclick="openFile('farmacia/cat.html')">
+    <button class="button" onclick="openFile('farmácia/cat.html')">
       <img src="ícones/farmacia.png" alt="New2">
     </button>
     <button class="button" onclick="openFile('motospra/index.html')">
