--- a/todaslojas/lojas/ebc/ebc.html
+++ b/todaslojas/lojas/ebc/ebc.html
@@ -1,129 +1,218 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minhas Imagens</title>
-    <link rel="stylesheet" href="estilo1/seuarquivo.css">
-    <style>
-        *, *:before, *:after {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
-        body {
-            background: #FCE1EA; /* Alterei a cor para rosa */
-            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-        }
+  <title>
+    EMPORIO BELEZA CH💄C
+  </title>
 
-        .retangulo {
-            width: 90%;
-            max-width: 60rem;
-            height: auto;
-            padding: 2rem 1rem;
-            background-color: #e450bb;
-            border: 1px solid #90CBFB;
-            text-align: center;
-            position: relative;
-            border-radius: 30px;
-            margin: 50px auto;
-            overflow: hidden;
-        }
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-        h1 {
-            font-size: 2rem;
-            transition: color 0.5s;
-            pointer-events: none;
-        }
-
-        .retangulo:hover h1 {
-            color: #000;
-        }
-
-        .tinta-rosa {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 0;
-            background-color: #90CBFB;
-            transition: height 1s;
-            z-index: 0;
-        }
-
-        .retangulo:hover .tinta-rosa {
-            height: 100%;
-        }
-
-        /* Adicionado estilo para as imagens */
-        .imagem-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 60vh;
-            overflow: hidden;
-            margin-top: -20px; /* Ajuste a distância negativa conforme necessário */
-        }
-
-        .imagem-container img {
-            max-width: 100%;
-            max-height: 100%;
-            margin: auto;
-            display: block;
-        }
-
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 1.5rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .retangulo {
-                width: 95%;
-                border-radius: 20px;
-            }
-        }
-    </style>
+  <!-- Custom styles for this template -->
+  <link href="css/style.css" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div class="retangulo">
-        <h1>Imagens do Empório Beleza Chic</h1>
-        <div class="tinta-rosa"></div>
+  <div class="hero_area">
+    <!-- header section strats -->
+    <header class="header_section">
+      <nav class="navbar navbar-expand-lg custom_nav-container ">
+        <a class="navbar-brand" href="index.html">
+          <span>
+            EMPORIO BELEZA CH💄C
+          </span>
+        </a>
+		<header class="header_section">
+  <nav class="navbar navbar-expand-lg custom_nav-container ">
+    <a class="navbar-brand" href="index.html">
+      <span>
+        ...
+      </span>
+    </a>
+    <!-- Local para o Vídeo -->
+    <video autoplay loop muted style="width:100%; display:block;">
+      <source src="video.mp4" type="video/mp4">
+      Seu navegador não suporta vídeo HTML5.
+    </video>
+  </nav>
+</header>
+
+      </nav>
+    </header>
+    <!-- end header section -->
+  </div>
+  <!-- end hero area -->
+
+  <!-- shop section -->
+  <section class="shop_section layout_padding">
+    <div class="container">
+      <div class="heading_container heading_center">
+        <h2>
+          PRODUTOS MAIS RECENTES
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="box">
+            <a href="visu/p1/visup.html">
+              <div class="img-box">
+               <img src="images/p1.jpg" alt="">
+              </div>
+              <div class="detail-box">
+                <h6>
+                  Esponjas Flat Mirror
+                </h6>
+                <h6>
+                  Preço
+                  <span>
+                    R$20,00
+                  </span>
+                </h6>
+              </div>
+              <div class="new">
+                <span>
+                  novo
+                </span>
+              </div>
+            </a>
+
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="box">
+            <a href="visu/p2/visup.html">
+              <div class="img-box">
+                <img src="images/p2.jpg" alt="">
+              </div>
+              <div class="detail-box">
+                <h6>
+                  Esponjinha Ruby Rose Midnight
+                </h6>
+                <h6>
+                  Preço
+                  <span>
+                    R$18,99
+                  </span>
+                </h6>
+              </div>
+              <div class="new">
+                <span>
+                  Novo
+                </span>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="box">
+            <a href="visu/p3/visup.html">
+              <div class="img-box">
+                <img src="images/p3.jpg" alt="">
+              </div>
+              <div class="detail-box">
+                <h6>
+                  Cílios Pórticios/Ruby Anjo 5D
+                </h6>
+                <h6>
+                  Preço
+                  <span>
+                    R$10,00
+                  </span>
+                </h6>
+              </div>
+              <div class="new">
+                <span>
+                  Novo
+                </span>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="box">
+            <a href="visu/p4/visup.html">
+              <div class="img-box">
+                <img src="images/p5.jpg" alt="">
+              </div>
+              <div class="detail-box">
+                <h6>
+                  Cílios pórticos ruby anjos 5D
+                </h6>
+                <h6>
+                  Preço
+                  <span>
+                    $95
+                  </span>
+                </h6>
+              </div>
+              <div class="new">
+                <span>
+                  New
+                </span>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="box">
+            <a href="visu/p5/visup.html">
+              <div class="img-box">
+                <img src="images/p6.jpg" alt="">
+              </div>
+              <div class="detail-box">
+                <h6>
+                  Gloss laqueado Ruby Rose
+                </h6>
+                <h6>
+                  Preço
+                  <span>
+                    R$2
+                  </span>
+                </h6>
+              </div>
+              <div class="new">
+                <span>
+                  New
+                </span>
+              </div>
+            </a>
+          </div>
+        </div>
+        <!-- Add more product boxes as needed -->
+      </div>
+      <div class="btn-box">
+        <a href="">
+          Ver todos os produtos
+        </a>
+      </div>
     </div>
+  </section>
+  <!-- end shop section -->
 
-    <!-- Contêiner para imagens -->
-    <div class="imagem-container">
-        <img src="imagens/imagem1.jpg" alt="Imagem 1">
-        <!-- Adicione mais imagens aqui -->
-    </div>
+  <!-- info section -->
+  <section class="info_section layout_padding2-top">
+    <!-- Content for Info Section Goes Here -->
+  </section>
+  <!-- end info section -->
 
-    <!-- Script de verificação de caminhos -->
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var paths = [
-                'lojas/ebc/imagem1.jpg',
-                'lojas/ebc/imagem2.jpg',
-                // Adicione mais caminhos conforme necessário
-            ];
-
-            paths.forEach(function (path) {
-                var img = new Image();
-                img.src = path;
-
-                img.onload = function () {
-                    console.log('Caminho correto:', path);
-                };
-
-                img.onerror = function () {
-                    console.error('Caminho incorreto ou imagem não encontrada:', path);
-                };
-            });
-        });
-    </script>
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script src="js/custom.js"></script>
 </body>
 
 </html>
