--- a/todaslojas/lojas/ebc/ebc.html
+++ b/todaslojas/lojas/ebc/ebc.html
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-
-  <title>
-    EMPORIO BELEZA CH💄C
-  </title>
-
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
-  <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EMPORIO BELEZA CH💄C</title>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -32,25 +16,15 @@
     <header class="header_section">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
-          <span>
-            EMPORIO BELEZA CH💄C
-          </span>
+          <span>EMPORIO BELEZA CH💄C</span>
         </a>
-		<header class="header_section">
-  <nav class="navbar navbar-expand-lg custom_nav-container ">
-    <a class="navbar-brand" href="index.html">
-      <span>
-        ...
-      </span>
-    </a>
-    <!-- Local para o Vídeo -->
-    <video autoplay loop muted style="width:100%; display:block;">
-      <source src="video.mp4" type="video/mp4">
-      Seu navegador não suporta vídeo HTML5.
-    </video>
-  </nav>
-</header>
-
+        <!-- Vídeo Responsivo -->
+        <div class="video-container">
+          <video autoplay loop muted playsinline style="width:100%; display:block;">
+            <source src="video.mp4" type="video/mp4">
+            Seu navegador não suporta vídeo HTML5.
+          </video>
+        </div>
       </nav>
     </header>
     <!-- end header section -->
@@ -61,11 +35,10 @@
   <section class="shop_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
-        <h2>
-          PRODUTOS MAIS RECENTES
-        </h2>
+        <h2>PRODUTOS MAIS RECENTES</h2>
       </div>
       <div class="row">
+        <!-- Caixas de Produtos -->
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
             <a href="visu/p1/visup.html">
@@ -197,7 +170,9 @@
       <div class="btn-box">
         <a href="">
           Ver todos os produtos
-        </a>
+      </div>
+      <div class="btn-box">
+        <a href="#">Ver todos os produtos</a>
       </div>
     </div>
   </section>
