--- a/todaslojas/lojas/ebc/ebc.html
+++ b/todaslojas/lojas/ebc/ebc.html
@@ -15,9 +15,13 @@
     <!-- header section strats -->
     <header class="header_section">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
-        <a class="navbar-brand" href="index.html">
-          <span>EMPORIO BELEZA CH💄C</span>
-        </a>
+        <a class="navbar-brand" href="index.html"><a class="navbar-brand" href="index.html">
+  <span></span>
+  <!-- Banner aqui -->
+  <div class="banner-container">
+    <img src="banner.png" alt="Banner">
+  </div>
+</a>
         <!-- Vídeo Responsivo -->
         <div class="video-container">
           <video autoplay loop muted playsinline style="width:100%; display:block;">
