--- a/todaslojas/lojas/ebc/ebc.html
+++ b/todaslojas/lojas/ebc/ebc.html
@@ -12,21 +12,18 @@
 
 <body>
   <div class="hero_area">
-    <!-- header section strats -->
-  <!-- Banner aqui -->
-  <div class="banner-container">
-    <img src="banner.png" alt="Banner">
-  </div>
-</a>
-        <!-- Vídeo Responsivo -->
-        <div class="video-container">
-          <video autoplay loop muted playsinline style="width:100%; display:block;">
-            <source src="video.mp4" type="video/mp4">
-            Seu navegador não suporta vídeo HTML5.
-          </video>
-        </div>
-      </nav>
-    </header>
+    <!-- header section starts -->
+    <!-- Banner aqui -->
+    <div class="banner-container">
+      <img src="banner.png" alt="Banner">
+    </div>
+    <!-- Vídeo Responsivo -->
+    <div class="video-container">
+      <video autoplay loop muted playsinline style="width:100%; display:block;">
+        <source src="video.mp4" type="video/mp4">
+        Seu navegador não suporta vídeo HTML5.
+      </video>
+    </div>
     <!-- end header section -->
   </div>
   <!-- end hero area -->
@@ -39,6 +36,7 @@
       </div>
       <div class="row">
         <!-- Caixas de Produtos -->
+        <!-- Produto 1 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
             <a href="visu/p1/visup.html">
@@ -46,25 +44,14 @@
                <img src="images/p1.jpg" alt="">
               </div>
               <div class="detail-box">
-                <h6>
-                  Esponjas Flat Mirror
-                </h6>
-                <h6>
-                  Preço
-                  <span>
-                    R$20,00
-                  </span>
-                </h6>
+                <h6>Esponjas Flat Mirror</h6>
+                <h6>Preço <span>R$20,00</span></h6>
               </div>
-              <div class="new">
-                <span>
-                  novo
-                </span>
-              </div>
+              <div class="new"><span>novo</span></div>
             </a>
-
           </div>
         </div>
+        <!-- Produto 2 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
             <a href="visu/p2/visup.html">
@@ -72,24 +59,14 @@
                 <img src="images/p2.jpg" alt="">
               </div>
               <div class="detail-box">
-                <h6>
-                  Esponjinha Ruby Rose Midnight
-                </h6>
-                <h6>
-                  Preço
-                  <span>
-                    R$18,99
-                  </span>
-                </h6>
+                <h6>Esponjinha Ruby Rose Midnight</h6>
+                <h6>Preço <span>R$18,99</span></h6>
               </div>
-              <div class="new">
-                <span>
-                  Novo
-                </span>
-              </div>
+              <div class="new"><span>Novo</span></div>
             </a>
           </div>
         </div>
+        <!-- Produto 3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
             <a href="visu/p3/visup.html">
@@ -97,24 +74,14 @@
                 <img src="images/p3.jpg" alt="">
               </div>
               <div class="detail-box">
-                <h6>
-                  Cílios Pórticios/Ruby Anjo 5D
-                </h6>
-                <h6>
-                  Preço
-                  <span>
-                    R$10,00
-                  </span>
-                </h6>
+                <h6>Cílios Pórticios/Ruby Anjo 5D</h6>
+                <h6>Preço <span>R$10,00</span></h6>
               </div>
-              <div class="new">
-                <span>
-                  Novo
-                </span>
-              </div>
+              <div class="new"><span>Novo</span></div>
             </a>
           </div>
         </div>
+        <!-- Produto 4 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
             <a href="visu/p4/visup.html">
@@ -122,24 +89,14 @@
                 <img src="images/p5.jpg" alt="">
               </div>
               <div class="detail-box">
-                <h6>
-                  Cílios pórticos ruby anjos 5D
-                </h6>
-                <h6>
-                  Preço
-                  <span>
-                    $95
-                  </span>
-                </h6>
+                <h6>Cílios pórticos ruby anjos 5D</h6>
+                <h6>Preço <span>$95</span></h6>
               </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
+              <div class="new"><span>New</span></div>
             </a>
           </div>
         </div>
+        <!-- Produto 5 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
             <a href="visu/p5/visup.html">
@@ -147,32 +104,18 @@
                 <img src="images/p6.jpg" alt="">
               </div>
               <div class="detail-box">
-                <h6>
-                  Gloss laqueado Ruby Rose
-                </h6>
-                <h6>
-                  Preço
-                  <span>
-                    R$2
-                  </span>
-                </h6>
+                <h6>Gloss laqueado Ruby Rose</h6>
+                <h6>Preço <span>R$2</span></h6>
               </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
+              <div class="new"><span>New</span></div>
             </a>
           </div>
         </div>
-        <!-- Add more product boxes as needed -->
+        <!-- Fim das Caixas de Produtos -->
       </div>
+      <!-- Botão ajustado para apontar para catalago/catalago.html -->
       <div class="btn-box">
-        <a href="">
-          Ver todos os produtos
-      </div>
-      <div class="btn-box">
-        <a href="#">Ver todos os produtos</a>
+        <a href="catalogo/catalogo.html">Ver todos os produtos</a>
       </div>
     </div>
   </section>
