--- a/todaslojas/lojas/ebc/ebc.html
+++ b/todaslojas/lojas/ebc/ebc.html
@@ -19,7 +19,23 @@
 </head>
 
 <body>
-  <!-- Seu código anterior aqui -->
+  <div class="hero_area">
+    <!-- header section starts -->
+    <!-- Banner aqui -->
+    <div class="banner-container">
+      <img src="banner.png" alt="Banner">
+    </div>
+    <!-- Vídeo Responsivo -->
+    <div class="video-container">
+      <video autoplay loop muted playsinline style="width:100%; display:block;">
+        <source src="video.mp4" type="video/mp4">
+        Seu navegador não suporta vídeo HTML5.
+      </video>
+    </div>
+    <!-- end header section -->
+  </div>
+  <!-- end hero area -->
+
   <!-- shop section -->
   <section class="shop_section layout_padding">
     <div class="container">
@@ -52,7 +68,17 @@
     </div>
   </section>
   <!-- end shop section -->
-  <!-- Seu código anterior continua aqui -->
+
+  <!-- info section -->
+  <section class="info_section layout_padding2-top">
+    <!-- Content for Info Section Goes Here -->
+  </section>
+  <!-- end info section -->
+
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script src="js/custom.js"></script>
 </body>
 
 </html>
