--- a/contrate/perfisc.html
+++ b/contrate/perfisc.html
@@ -10,6 +10,7 @@
   .photo { margin: 10px; }
   .photo img { width: 100%; max-width: 200px; height: auto; }
   .dropdown { position: relative; display: inline-block; }
+  .dropbtn { background-color: #464746; color: white; padding: 10px; font-size: 16px; border: none; cursor: pointer; }
   .dropdown-content { display: none; position: absolute; background-color: #f9f9f9; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1; }
   .dropdown-content span { color: black; padding: 12px 16px; text-decoration: none; display: block; }
   .dropdown-content span:hover { background-color: #f1f1f1 }
@@ -19,10 +20,11 @@
 <body>
 
 <div class="dropdown">
-  <button onclick="toggleDropdown()" class="dropbtn">Categorias</button>
+  <button onclick="toggleDropdown()" class="dropbtn">Selecione uma Categoria ▼</button>
   <div id="myDropdown" class="dropdown-content">
     <span onclick="filterCategory('auxiliares')">Auxiliares Administrativos</span>
     <span onclick="filterCategory('limpadores')">Limpadores de Quintal</span>
+    <span onclick="filterCategory('outros')">Outras Categorias</span>
     <!-- Adicione mais categorias aqui -->
   </div>
 </div>
@@ -30,6 +32,15 @@
 <div id="gallery" class="gallery">
   <!-- As fotos e categorias serão inseridas aqui pelo JavaScript -->
 </div>
+
+<script>
+// Restante do código permanece o mesmo
+// ...
+</script>
+
+</body>
+</html>
+
 
 <script>
 var photos = [
