--- a/comidas/lojass.html
+++ b/comidas/lojass.html
@@ -62,8 +62,8 @@
         <img src="logos/emporiobelezachic.gif" alt="emporiobelezachic">
         <p>emporiobelezachic</p>
     </div>
-    <div class="item" onclick="openHtml('lojas/SCHMITT/schmitt.html')">
-        <img src="logos/sam.gif" alt="sam">
+    <div class="item" onclick="openHtml('lojas/vtc/index.html')">
+        <img src="logos/vtc.gif" alt="sam">
         <p>Schmitt Arte em Madeira</p>
     </div>
     <div class="item" onclick="openHtml('lojas/evc/evc.html')">
