--- a/comidas/lojas/vtc/index.html
+++ b/comidas/lojas/vtc/index.html
@@ -15,19 +15,19 @@
             <img src="hamburguer.jpg" alt="Hambúrguer delicioso">
             <h2>Hambúrguer</h2>
             <p>Um hambúrguer suculento com queijo, alface e tomate.</p>
-            <button>Adicionar ao Carrinho</button>
+            <button onclick="adicionarAoCarrinho('Hambúrguer')">Adicionar ao Carrinho</button>
         </div>
         <div class="product">
             <img src="misto.jpg" alt="Sanduíche misto">
             <h2>Sanduíche Misto</h2>
             <p>Pão de forma com presunto, queijo e manteiga.</p>
-            <button>Adicionar ao Carrinho</button>
+            <button onclick="adicionarAoCarrinho('Sanduíche Misto')">Adicionar ao Carrinho</button>
         </div>
         <div class="product">
             <img src="refrigerante.jpg" alt="Refrigerante gelado">
             <h2>Refrigerante</h2>
             <p>Escolha entre Coca-Cola, Pepsi ou Guaraná.</p>
-            <button>Adicionar ao Carrinho</button>
+            <button onclick="adicionarAoCarrinho('Refrigerante')">Adicionar ao Carrinho</button>
         </div>
     </main>
     <footer>
