--- a/index.html
+++ b/index.html
@@ -9,25 +9,22 @@
       box-sizing: border-box;
     }
 
+    html, body {
+      max-width: 100vw;
+      overflow-x: hidden;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
       background: linear-gradient(to right, #ffdf00, #002776);
-      margin: 0;
       font-family: Arial, Helvetica, sans-serif;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-    }
-
-    .search {
-      position: relative;
-      padding: 10px;
-    }
-
-    .search input {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      border-radius: 20px;
+      background-image: url('sua-imagem-de-fundo.jpg'); /* Substitua 'sua-imagem-de-fundo.jpg' pelo nome da sua imagem de fundo com o caminho correto */
+      background-size: cover;
+      background-position: center;
     }
 
     .slideshow {
@@ -36,15 +33,15 @@
       overflow: hidden;
       display: flex;
       justify-content: center;
-      z-index: 1;
+      align-items: center;
     }
 
     .slideshow img, .slideshow video {
-      max-width: 90%;
-      height: auto;
+      width: 100%;
+      max-height: 50vh;
       object-fit: cover;
       margin: auto;
-      display: none; /* Garante que os slides não sejam exibidos por padrão */
+      display: block;
     }
 
     .buttons-container {
@@ -62,7 +59,6 @@
 
     .button {
       width: 28%;
-      height: auto;
       border: none;
       border-radius: 500px;
       background-color: transparent;
@@ -74,18 +70,13 @@
 
     .button img {
       max-width: 140%;
-      height: auto;
     }
   </style>
 </head>
 <body>
 
-<div class="search">
-  <input type="text" placeholder="Busca">
-  <i class="fa fa-search"></i>
-</div>
-
-<div class="slideshow">
+<!-- Seu conteúdo HTML aqui -->
+<div class="slideshow" onclick="openFile('promo/ebc.html')">
   <img src="promo/promo1.jpg" alt="promo1">
   <video controls>
     <source src="promo/video.mp4" type="video/mp4">
@@ -118,7 +109,6 @@
     showSlide(currentSlide);
   }
 
-  // Inicia o slideshow mostrando o primeiro slide
   showSlide(currentSlide);
 
   setInterval(nextSlide, 30000);
@@ -129,7 +119,6 @@
     <button class="button" onclick="openFile('comidas/lojass.html')">
       <img src="ícones/comida.png" alt="Comida">
     </button>
-    <!-- Botão Lojas ajustado para abrir o arquivo dentro da pasta todaslojas -->
     <button class="button" onclick="openFile('todaslojas/lojass.html')">
       <img src="ícones/lojas.png" alt="Lojas">
     </button>
