--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <div class="slideshow" onclick="openFile('promo/promo1.html')">
   <img src="promo/promo1.jpg" alt="promo1">
-  <video controls autoplay loop muted id="videoSlide">
+  <video controls autoplay muted id="videoSlide">
     <source src="promo/video.mp4" type="video/mp4">
     Seu navegador não suporta o elemento de vídeo.
   </video>
