--- a/comidas/lojas/evc/evc.html
+++ b/comidas/lojas/evc/evc.html
@@ -62,7 +62,11 @@
     </button>
     <ul id="ondeEsta">
         <li onclick="selecionar('partida', 'Belterra')">Belterra</li>
+        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
         <li onclick="selecionar('partida', 'Monte Alegre')">Monte Alegre</li>
+        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
+        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
+        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
     </ul>
 
     <button id="botaoDestino" onclick="toggleList('ondeVai')" style="display:none;">
