--- a/comidas/lojas/evc/evc.html
+++ b/comidas/lojas/evc/evc.html
@@ -67,6 +67,8 @@
         <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
         <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
         <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
+        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
+        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
     </ul>
 
     <button id="botaoDestino" onclick="toggleList('ondeVai')" style="display:none;">
