--- a/comidas/lojas/evc/evc.html
+++ b/comidas/lojas/evc/evc.html
@@ -43,6 +43,8 @@
             display: none;
             background-color: rgba(255, 255, 255, 0.1);
             border-radius: 10px;
+            max-height: 250px;
+            overflow-y: auto;
         }
         li {
             padding: 10px 20px;
@@ -61,38 +63,55 @@
         <i class="fas fa-anchor"></i> Escolha seu porto de partida
     </button>
     <ul id="ondeEsta">
+        <li onclick="selecionar('partida', 'Alenquer')">Alenquer</li>
+        <li onclick="selecionar('partida', 'Monte Alegre')">Monte Alegre</li>
         <li onclick="selecionar('partida', 'Belterra')">Belterra</li>
         <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
-        <li onclick="selecionar('partida', 'Monte Alegre')">Monte Alegre</li>
-        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
-        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
-        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
-        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
-        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
+        <li onclick="selecionar('partida', 'Itaituba')">Itaituba</li>
+        <li onclick="selecionar('partida', 'Óbidos')">Óbidos</li>
+        <li onclick="selecionar('partida', 'Oriximiná')">Oriximiná</li>
+        <li onclick="selecionar('partida', 'Gurupá')">Gurupá</li>
+		<li onclick="selecionar('partida', 'Belterra')">Belterra</li>
     </ul>
 
     <button id="botaoDestino" onclick="toggleList('ondeVai')" style="display:none;">
         <i class="fas fa-ship"></i> Escolha seu destino
     </button>
     <ul id="ondeVai">
-        <li onclick="selecionar('destino', 'Miami')">Miami</li>
-        <li onclick="selecionar('destino', 'Barcelona')">Barcelona</li>
+        <li onclick="selecionar('partida', 'Alenquer')">Alenquer</li>
+        <li onclick="selecionar('partida', 'Monte Alegre')">Monte Alegre</li>
+        <li onclick="selecionar('partida', 'Belterra')">Belterra</li>
+        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
+        <li onclick="selecionar('partida', 'Itaituba')">Itaituba</li>
+        <li onclick="selecionar('partida', 'Óbidos')">Óbidos</li>
+        <li onclick="selecionar('partida', 'Oriximiná')">Oriximiná</li>
+        <li onclick="selecionar('partida', 'Gurupá')">Gurupá</li>
+		<li onclick="selecionar('partida', 'Belterra')">Belterra</li>
     </ul>
 
     <button id="botaoMes" onclick="toggleList('meses')" style="display:none;">
         <i class="fas fa-calendar-alt"></i> Escolha o mês
     </button>
     <ul id="meses">
-        <li onclick="selecionar('mes', 'Dezembro')">Dezembro</li>
         <li onclick="selecionar('mes', 'Janeiro')">Janeiro</li>
+        <li onclick="selecionar('mes', 'Fevereiro')">Fevereiro</li>
+        <li onclick="selecionar('mes', 'Março')">Março</li>
+        <li onclick="selecionar('mes', 'Abril')">Abril</li>
+        <li onclick="selecionar('mes', 'Maio')">Maio</li>
+        <li onclick="selecionar('mes', 'Junho')">Junho</li>
+        <li onclick="selecionar('mes', 'Julho')">Julho</li>
+        <li onclick="selecionar('mes', 'Agosto')">Agosto</li>
+        <li onclick="selecionar('mes', 'Setembro')">Setembro</li>
+        <li onclick="selecionar('mes', 'Outubro')">Outubro</li>
+        <li onclick="selecionar('mes', 'Novembro')">Novembro</li>
+		<li onclick="selecionar('mes', 'Dezembro')">Dezembro</li>
     </ul>
 
     <button id="botaoDia" onclick="toggleList('dias')" style="display:none;">
         <i class="fas fa-calendar-day"></i> Escolha o dia
     </button>
     <ul id="dias">
-        <li onclick="selecionar('dia', '31')">31</li>
-        <li onclick="selecionar('dia', '15')">15</li>
+        <!-- A lista de dias será atualizada dinamicamente -->
     </ul>
 
     <button id="buscar" onclick="buscarViagem()" style="display:none;">
@@ -120,6 +139,21 @@
             'Outubro': 9,
             'Novembro': 10,
             'Dezembro': 11
+        };
+
+        const diasDoMes = {
+            'Janeiro': 31,
+            'Fevereiro': 28, // 2025 não é ano bissexto
+            'Março': 31,
+            'Abril': 30,
+            'Maio': 31,
+            'Junho': 30,
+            'Julho': 31,
+            'Agosto': 31,
+            'Setembro': 30,
+            'Outubro': 31,
+            'Novembro': 30,
+            'Dezembro': 31
         };
 
         function toggleList(id) {
@@ -159,11 +193,26 @@
             if (tipo === 'mes') {
                 document.getElementById('botaoDia').style.display = 'block';
                 document.getElementById('meses').style.display = 'none';  // Esconde a lista de meses
+                atualizarDias();
             }
             if (tipo === 'dia') {
                 document.getElementById('buscar').style.display = 'block';
                 document.getElementById('dias').style.display = 'none';  // Esconde a lista de dias
             }
+        }
+
+        function atualizarDias() {
+            const diasUl = document.getElementById('dias');
+            diasUl.innerHTML = ''; // Limpa a lista de dias
+
+            const diasDisponiveis = diasDoMes[viagem.mes];
+            for (let i = 1; i <= diasDisponiveis; i++) {
+                const li = document.createElement('li');
+                li.textContent = i;
+                li.onclick = () => selecionar('dia', i);
+                diasUl.appendChild(li);
+            }
+            diasUl.style.display = 'block'; // Exibe a lista de dias
         }
 
         function buscarViagem() {
