--- a/comidas/lojas/evc/evc.html
+++ b/comidas/lojas/evc/evc.html
@@ -78,14 +78,14 @@
         <i class="fas fa-ship"></i> Escolha seu destino
     </button>
     <ul id="ondeVai">
-        <li onclick="selecionar('partida', 'Alenquer')">Alenquer</li>
-        <li onclick="selecionar('partida', 'Monte Alegre')">Monte Alegre</li>
-        <li onclick="selecionar('partida', 'Belterra')">Belterra</li>
-        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
-        <li onclick="selecionar('partida', 'Itaituba')">Itaituba</li>
-        <li onclick="selecionar('partida', 'Óbidos')">Óbidos</li>
-        <li onclick="selecionar('partida', 'Oriximiná')">Oriximiná</li>
-        <li onclick="selecionar('partida', 'Gurupá')">Gurupá</li>
+        <li onclick="selecionar('destino', 'Alenquer')">Alenquer</li>
+        <li onclick="selecionar('destino', 'Monte Alegre')">Monte Alegre</li>
+        <li onclick="selecionar('destino', 'Belterra')">Belterra</li>
+        <li onclick="selecionar('destino', 'Santarém')">Santarém</li>
+        <li onclick="selecionar('destino', 'Itaituba')">Itaituba</li>
+        <li onclick="selecionar('destino', 'Óbidos')">Óbidos</li>
+        <li onclick="selecionar('destino', 'Oriximiná')">Oriximiná</li>
+        <li onclick="selecionar('destino', 'Gurupá')">Gurupá</li>
 		<li onclick="selecionar('partida', 'Belterra')">Belterra</li>
     </ul>
 
