--- a/motospra/index.html
+++ b/motospra/index.html
@@ -54,7 +54,7 @@
 <script>
     // Definir o tempo de espera para o redirecionamento
     setTimeout(function() {
-        window.location.href = "https://einhero.pythonanywhere.com/";
+        window.location.href = "https://eihero.pythonanywhere.com/";
     }, 5000); // 5000 milissegundos = 5 segundos
 </script>
 
